Compiler-Warnungen im Build-Prozess entfernt